--- a/home.html
+++ b/home.html
@@ -6,39 +6,64 @@
 
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Open+Sans:300" rel="stylesheet">
 
 
   </head>
   <body>
 
     <div class="sidebar">
-      <img src="#" id="logo" />
+      <img src="http://res.cloudinary.com/tayjsolis/image/upload/c_scale,w_200/v1522699572/manymanyhandslogobigwhite.png" id="logo" />
 
       <div class="card">
-        <h2 class="cardtitle">Tay J Solis</h2>
-        <p class="contact">
-          tayjsolis@gmail.com<br />
-          (619) 213 - 8931
-        </p>
+        <h2><a href="home.html" class="cardtitle"> Tay J Solis</a></h2>
+        <div class="content" id="open">
+          <p class="contact">
+            tayjsolis@gmail.com<br />
+            (619) 213 - 8931
+          </p>
+        </div>
       </div>
 
       <div class="card">
         <h2 class="cardtitle">Websites</h2>
-        <ul class="links">
-          <li><a href="#" target="_blank">ChristineCuertoPhotography.com</a></li>
-          <li><a href="#" target="_blank">NzinghazPalace.com</a></li>
-          <li><a href="#" target="_blank">GrabEmByTheHeart.com</a></li>
-        </ul>
+        <div class="content">
+          <ul class="links">
+            <li><a href="#" target="_blank">ChristineCuertoPhotography.com <i class="fas fa-external-link-alt"></i></a></li>
+            <li><a href="http://www.kasiemobi.com/" target="_blank">Kasiemboi.com <i class="fas fa-external-link-alt"></i></a></li>
+            <li><a href="http://www.nzinghazpalace.com/" target="_blank">NzinghazPalace.com <i class="fas fa-external-link-alt"></i></a></li>
+            <li><a href="http://www.grabembytheheart.com/" target="_blank">GrabEmByTheHeart.com <i class="fas fa-external-link-alt"></i></a></li>
+          </ul>
+        </div>
+
       </div>
 
       <div class="card">
         <h2 class="cardtitle">Design</h2>
-        <ul class="links">
-          <li><a href="#" target="_blank">A</a></li>
-          <li><a href="#" target="_blank">B</a></li>
-          <li><a href="#" target="_blank">C</a></li>
-        </ul>
+        <div class="content">
+          <ul class="links">
+            <li><a href="#" target="_blank">A</a></li>
+            <li><a href="#" target="_blank">B</a></li>
+            <li><a href="#" target="_blank">C</a></li>
+          </ul>
+        </div>
+
+      </div>
+
+      <div class="card">
+        <h2 class="cardtitle">Design</h2>
+        <div class="content">
+          <ul class="links">
+            <li><a href="#" target="_blank">A</a></li>
+            <li><a href="#" target="_blank">B</a></li>
+            <li><a href="#" target="_blank">C</a></li>
+          </ul>
+        </div>
+
+      </div>
+
+      <div class="card">
+        <h2><a class="cardtitle" href="http://manyhandscreative.com/">Art</a</h2>
       </div>
 
       <div class="bot">
@@ -52,6 +77,10 @@
 
     </div>
 
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
     <script src="sidebar.js" type="text/javascript"></script>
   </body>
 </html>
