--- a/home.html
+++ b/home.html
@@ -16,8 +16,14 @@
       <img src="http://res.cloudinary.com/tayjsolis/image/upload/c_scale,w_200/v1522699572/manymanyhandslogobigwhite.png" id="logo" />
 
       <div class="card">
-        <h2><a href="home.html" class="cardtitle"> Tay J Solis</a></h2>
-        <div class="content" id="open">
+        <h2 class="name"><a href="home.html" class="cardtitle"> Tay J Solis</a></h2>
+        <div class="content contactCard" id="open">
+          <ul class="socialLinks">
+            <li><a href="https://www.linkedin.com/in/tayjsolis/"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/tay-solis"><i class="fab fa-github-square"></i></a></li>
+            <li><a href="https://www.instagram.com/manyhands.tay/"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://codepen.io/tay-solis/"><i class="fab fa-codepen"></i></a></li>
+          </ul><br/>
           <p class="contact">
             tayjsolis@gmail.com<br />
             (619) 213 - 8931
@@ -26,7 +32,7 @@
       </div>
 
       <div class="card">
-        <h2 class="cardtitle">Websites</h2>
+        <h2 class="cardtitle">Design</h2>
         <div class="content">
           <ul class="links">
             <li><a href="#" target="_blank">ChristineCuertoPhotography.com <i class="fas fa-external-link-alt"></i></a></li>
@@ -39,19 +45,7 @@
       </div>
 
       <div class="card">
-        <h2 class="cardtitle">Design</h2>
-        <div class="content">
-          <ul class="links">
-            <li><a href="#" target="_blank">A</a></li>
-            <li><a href="#" target="_blank">B</a></li>
-            <li><a href="#" target="_blank">C</a></li>
-          </ul>
-        </div>
-
-      </div>
-
-      <div class="card">
-        <h2 class="cardtitle">Design</h2>
+        <h2 class="cardtitle">Fidgets</h2>
         <div class="content">
           <ul class="links">
             <li><a href="#" target="_blank">A</a></li>
@@ -66,17 +60,11 @@
         <h2><a class="cardtitle" href="http://manyhandscreative.com/">Art</a</h2>
       </div>
 
-      <div class="bot">
-        <ul class="socialLinks">
-          <li><a href="https://www.linkedin.com/in/tayjsolis/"><i class="fab fa-linkedin"></i></a></li>
-          <li><a href="https://github.com/tay-solis"><i class="fab fa-github-square"></i></a></li>
-          <li><a href="https://www.instagram.com/manyhands.tay/"><i class="fab fa-instagram"></i></a></li>
-          <li><a href="https://codepen.io/tay-solis/"><i class="fab fa-codepen"></i></a></li>
-        </ul>
-      </div>
-
     </div>
 
+    <div class="main">
+      <h1>About</h1>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
